Refactor StateLoading